voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-6.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] verses={1}

[$] time={4,4} | voices={S}
---

[S] |d :r !m :f ||
[2] do re mi fa

=== DIAGNOSTICS ===
warning[E019]: expected 1, got 2
 --> mismatched_verse_warning.vfa:8:1
  |
 8 | [2] do re mi fa
   | ^^^^^^^^^^^^^^^ warning
