voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__ivalid_section_merge_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S,T}
---

[S] |d :r !m :f |s :l !t :d+1 ||
[T] |d :r !m :f |s :l !t :d+1 ||

<<

[S] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E017]: expected 2 voices, got 1
 --> ivalid_section_merge_error.vfa:8:1
  |
 2 | [$] time={4,4} | voices={S,T}
   | ----------------------------- voices defined here
 8 | <<
   | ^^ error

error[E031]: merged section structure does not match previous
 --> ivalid_section_merge_error.vfa:8:1
  |
 3 | ---
   | --- root section defined here
 8 | <<
   | ^^ error
