voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__key_reassignment_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] title="foo"
[#] title="bar"

---

=== DIAGNOSTICS ===
error[E026]: 'voices' prameter has not been defined
 --> key_reassignment_error.vfa:5:1
  |
 1 | 
   | - consider adding 'voice' metadata
 5 | ---
   | ^^^ error

warning[E004]: reassignment of key 'title'
 --> key_reassignment_error.vfa:3:1
  |
 2 | [#] title="foo"
   | --------------- 'title' has been assigned here
 3 | [#] title="bar"
   | ^^^^^^^^^^^^^^^ 'title' has been reassigned here
