voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__missing_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] title="foo 

---

=== DIAGNOSTICS ===
error[E002]: missing '"'
 --> missing_error.vfa:2:1
  |
 2 | [#] title="foo 
   | ^^^^^^^^^^^^^^^ error

error[E026]: 'voices' prameter has not been defined
 --> missing_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error
