voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__non_top_level_override_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} voices={S,T}
---

[S] |d :r !m :f ||

++

[$] key={C}

[T] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E028]: parameter override should be done at the top level
 --> non_top_level_override_error.vfa:8:1
  |
 3 | ---
   | --- set parameter override here
 8 | 
   | ^ error

error[E002]: missing '|'
 --> non_top_level_override_error.vfa:2:1
  |
 2 | [$] time={4,4} voices={S,T}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ error
